Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #2329: API to list stylesheet from the theme page
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 